--- a/style.css
+++ b/style.css
@@ -34,23 +34,23 @@ h4{
 .projects-list {
     position: relative;
     width: 40%;
-    heigth:60%;
+    height:68%;
     overflow: auto;
     left: 30%;
     top: 2vh;
     border-style: groove;
-    border-radius: 20px;
+    border-radius: 12px;
     border-color: #fb81f6;
     box-shadow: rgb(84 25 120 / 85%) 10px 10px 16px;
 }
-::-webkit-scrollbar {
+.projects-list::-webkit-scrollbar {
     // Width of vertical scroll bar
     width: 8px;
     // Height of horizontal scroll bar
     height: 10px;
 
   }
-  ::-webkit-scrollbar-thumb {
+.projects-list::-webkit-scrollbar-thumb {
     border-radius: 8px;
     background: #c2c9d2;
   }
